--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Il mio viaggio a Londra</title>
+    <title>Il mio Viaggio a Londra</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <div>
+            <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="Ruota di Londra">
+            <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="Ruota di Londra">
+            <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="Ruota di Londra">
+        </div>
+        <hr>
+    </header>
+    <main>
+        
+    </main>
 </body>
 </html>
