--- a/index.html
+++ b/index.html
@@ -51,6 +51,27 @@
         </table>
         <hr>
         <h3>Cose da fare</h3>
+       <ul>
+        <li> Visitare la Tower of London &chi;</li>
+        <li>Visitare greenwich &radic;</li>
+        <li>Ascoltare un artista di strada a Covent Garden &radic;</li>
+        <li>Mangiare il tipico Fish and Chips inglese &chi;</li>
+       </ul>
+       <hr>
+       <h3>Info utili</h3>
+       <ol>
+        <li>Numeri utili di emergenza
+            <ul>
+                <li><strong>999</strong> - Emergenza</li>
+                <li><strong>101</strong> - Numero polizia</li>
+                <li><strong>111</strong> - Numero assistenza medica</li>
+            </ul>
+        </li>
+        <li></li>
+        <li></li>
+       </ol>
+
+        
     </main>
 </body>
 </html>
