--- a/index.html
+++ b/index.html
@@ -60,16 +60,33 @@
        <hr>
        <h3>Info utili</h3>
        <ol>
-        <li>Numeri utili di emergenza
+        <li>
+            Numeri utili di emergenza
             <ul>
                 <li><strong>999</strong> - Emergenza</li>
                 <li><strong>101</strong> - Numero polizia</li>
                 <li><strong>111</strong> - Numero assistenza medica</li>
             </ul>
         </li>
-        <li></li>
-        <li></li>
+        <li>
+            Hotel
+            <ul>
+              <li><strong>Nome hotel</strong>: Buckingham Palace </li>
+              <li><strong>Indirizzo hotel</strong>: Westminster, London SW1A 1AA,Regno Unito</li>
+           </ul>
+        </li>
+        <li>
+            Aereo
+            <ul>
+                <li><strong>Volo di andata</strong>: Y1234X, ore 9.30 da Milano Malpensa</li>
+                <li><strong>Volo di ritorno</strong>: Y1236X, Ore 18.30 da London Heathrow</li>
+             </ul>
+        </li>
        </ol>
+       <hr>
+       <h4>Le foto</h4>
+       <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="">
+       <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="">
 
         
     </main>
